vendor/impl-trait-for-tuples/tests/ui/max_before_min_in_arguments.stderr
error: It is expected that `min` comes before `max` and that `max > min` is true!
 --> $DIR/max_before_min_in_arguments.rs:1:1
  |
1 | #[impl_trait_for_tuples::impl_for_tuples(5, 2)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
